--- a/form/step5.html
+++ b/form/step5.html
@@ -1,142 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/assets/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
 
-    <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+  <link rel="stylesheet" href="/assets/style.css" />
 
-  <body>
-    <div data-layer="confirmar" class="Step5">
-      <div data-layer="wrapper" class="Wrapper">
-        <div data-layer="header" class="Header">
-          <div data-layer="logo" class="Logo">
-            <div data-layer="datalpine" class="Datalpine">
-              <img
-                data-layer="logo_image"
-                class="LogoImage"
-                src="..\tools\logo.png"
-              />
-              <img
-                data-layer="DatLogo"
-                class="Datlogo"
-                src="..\tools\DatLogo.png"
-              />
-            </div>
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div data-layer="confirmar" class="Step5">
+    <div data-layer="wrapper" class="Wrapper">
+      <div data-layer="header" class="Header">
+        <div data-layer="logo" class="Logo">
+          <div data-layer="datalpine" class="Datalpine">
+            <img data-layer="logo_image" class="LogoImage" src="..\tools\logo.png" />
+            <img data-layer="DatLogo" class="Datlogo" src="..\tools\DatLogo.png" />
           </div>
-          <a
-            href="https://datalpine.mx/exploradores/"
-            data-layer="Primary BTN"
-            class="PrimaryBtn"
-          >
-            <div data-layer="Button Text" class="ButtonText">Exploradores</div>
-          </a>
         </div>
-      </div>
-      <div data-layer="form_step" class="FormStep1">
-        <div data-layer="titulo" class="Titulo">Confirmar solicitud</div>
-        <div data-layer="desc" class="DescText">
-          ¿Está seguro de realizar el envío de su información?
-        </div>
-        <div data-layer="step_form" class="StepForm FinForm">
-          <div data-layer="progreso" class="ProgresoConfirm FinProgreso">
-            <div data-layer=" steps" class="Steps">
-              <div data-layer="step1_bar" class="Step1BarC"></div>
-              <div data-layer="step2_bar" class="Step2BarC"></div>
-              <div data-layer="step3_bar" class="Step3BarC"></div>
-              <div data-layer="step1_progreso" class="Step1Progreso">
-                <div
-                  data-layer="Ellipse 435"
-                  class="Ellipse435 Ellipse435Morado"
-                ></div>
-                <div data-layer="1" class="numberOne numberOneMorado">
-                  <p>1</p>
-                </div>
-              </div>
-              <div data-layer="step2_progreso" class="Step2Progreso">
-                <div
-                  data-layer="Ellipse 436"
-                  class="Ellipse438 Ellipse436Morado"
-                ></div>
-                <div data-layer="2" class="TwoC numberTwoMorado">
-                  <p>2</p>
-                </div>
-              </div>
-              <div data-layer="step3_progreso" class="Step3Progreso">
-                <div
-                  data-layer="Ellipse 437"
-                  class="Ellipse439 Ellipse439Morado"
-                ></div>
-                <div data-layer="3" class="TreeC numberTreeMorado">
-                  <p>3</p>
-                </div>
-              </div>
-              <div data-layer="step4_progreso" class="Step4Progreso">
-                <div data-layer="Ellipse 437" class="Ellipse441"></div>
-                <div data-layer="4" class="NumberFour">
-                  <p>4</p>
-                </div>
-                <div data-layer="4" class="NumberFour numberFourMorado">
-                  <p>4</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div data-layer="line" class="Line"></div>
-          <br />
-          <div data-layer="icon_confirm" class="IconConfirm">
-            <div data-layer="icon" class="Icon">
-              <div data-layer="Rectangle 4343" class="Rectangle4343"></div>
-              <div data-layer="Rectangle 4345" class="Rectangle4345"></div>
-              <div data-layer="Rectangle 4344" class="Rectangle4344"></div>
-              <div data-layer="Rectangle 4346" class="Rectangle4346"></div>
-              <div data-layer="clock" class="Clock">
-                <i class="bi bi-clock-history"></i>
-              </div>
-            </div>
-          </div>
-
-          <div data-layer="text_modal" class="TextModal">
-            <div data-layer="desc" class="Desc">
-              Tenga en cuenta que el procesamiento de su solicitud puede tomar
-              un tiempo, pero nos comprometemos a responderle lo antes posible.
-            </div>
-            <div data-layer="titulo" class="Titulo">
-              ¡Gracias por su confianza!
-            </div>
-            <br />
-          </div>
-
-          <a href="step6.html" data-layer="Primary BTN" class="PrimaryBtn">
-            <div data-layer="Button Text" class="ButtonText">Enviar</div>
-          </a>
-          <br />
-        </div>
-        <div data-layer="navigation" class="Navigation">
-          <a href="step4.html" data-layer="Secondary BTN" class="SecondaryBtn">
-            <div data-layer="Button Text" class="ButtonTextWhite">Anterior</div>
-          </a>
-        </div>
+        <a href="https://datalpine.mx/exploradores/" data-layer="Primary BTN" class="PrimaryBtn">
+          <div data-layer="Button Text" class="ButtonText">Exploradores</div>
+        </a>
       </div>
     </div>
-  </body>
+    <div data-layer="form_step" class="FormStep1">
+      <div data-layer="titulo" class="Titulo">Confirmar solicitud</div>
+      <div data-layer="desc" class="DescText">
+        ¿Está seguro de realizar el envío de su información?
+      </div>
+      <div data-layer="step_form" class="StepForm FinForm">
+        <div data-layer="progreso" class="ProgresoConfirm FinProgreso">
+          <div data-layer=" steps" class="Steps">
+            <div data-layer="step1_bar" class="Step1BarC"></div>
+            <div data-layer="step2_bar" class="Step2BarC"></div>
+            <div data-layer="step3_bar" class="Step3BarC"></div>
+            <div data-layer="step1_progreso" class="Step1Progreso">
+              <div data-layer="Ellipse 435" class="Ellipse435 Ellipse435Morado"></div>
+              <div data-layer="1" class="numberOne numberOneMorado">
+                <p>1</p>
+              </div>
+            </div>
+            <div data-layer="step2_progreso" class="Step2Progreso">
+              <div data-layer="Ellipse 436" class="Ellipse438 Ellipse436Morado"></div>
+              <div data-layer="2" class="TwoC numberTwoMorado">
+                <p>2</p>
+              </div>
+            </div>
+            <div data-layer="step3_progreso" class="Step3Progreso">
+              <div data-layer="Ellipse 437" class="Ellipse439 Ellipse439Morado"></div>
+              <div data-layer="3" class="TreeC numberTreeMorado">
+                <p>3</p>
+              </div>
+            </div>
+            <div data-layer="step4_progreso" class="Step4Progreso">
+              <div data-layer="Ellipse 437" class="Ellipse441"></div>
+              <div data-layer="4" class="NumberFour">
+                <p>4</p>
+              </div>
+              <div data-layer="4" class="NumberFour numberFourMorado">
+                <p>4</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div data-layer="line" class="Line"></div>
+        <br />
+        <div data-layer="icon_confirm" class="IconConfirm">
+          <div data-layer="icon" class="Icon">
+            <div data-layer="Rectangle 4343" class="Rectangle4343"></div>
+            <div data-layer="Rectangle 4345" class="Rectangle4345"></div>
+            <div data-layer="Rectangle 4344" class="Rectangle4344"></div>
+            <div data-layer="Rectangle 4346" class="Rectangle4346"></div>
+            <div data-layer="clock" class="Clock">
+              <i class="bi bi-clock-history"></i>
+            </div>
+          </div>
+        </div>
+
+        <div data-layer="text_modal" class="TextModal">
+          <div data-layer="desc" class="Desc">
+            Tenga en cuenta que el procesamiento de su solicitud puede tomar
+            un tiempo, pero nos comprometemos a responderle lo antes posible.
+          </div>
+          <div data-layer="titulo" class="Titulo">
+            ¡Gracias por su confianza!
+          </div>
+          <br />
+        </div>
+
+        <a href="step6.html" data-layer="Primary BTN" id="btnDescargar" class="PrimaryBtn">
+          <div data-layer="Button Text" class="ButtonText">Enviar</div>
+        </a>
+
+        <br />
+      </div>
+      <div data-layer="navigation" class="Navigation">
+        <a href="step4.html" data-layer="Secondary BTN" class="SecondaryBtn">
+          <div data-layer="Button Text" class="ButtonTextWhite">Anterior</div>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    document.getElementById("btnDescargar").addEventListener("click", () => {
+      const keys = Object.keys(sessionStorage);
+      let datos = {};
+
+      keys.forEach((key) => {
+        let value = sessionStorage.getItem(key);
+
+        // Ocultar completamente valores largos o base64
+        if (
+          key.toLowerCase().includes("base64") ||
+          (typeof value === "string" &&
+            value.length > 200 &&
+            value.startsWith("data:"))
+        ) {
+          datos[key] = "[BASE64_IMAGE_REDACTED]";
+        } else {
+          datos[key] = value;
+        }
+      });
+
+      const blob = new Blob([JSON.stringify(datos, null, 2)], {
+        type: "application/json",
+      });
+      const url = URL.createObjectURL(blob);
+
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "datos.json";
+      a.click();
+
+      URL.revokeObjectURL(url);
+
+      // Limpiar sessionStorage después de la descarga
+      sessionStorage.clear();
+    });
+  </script>
+
+
+</body>
+
 </html>
